[tool.poetry]
name = "slavarobotam_brain_games"
version = "0.1.45"
description = ""
authors = ["mari <zefiratakuet@yandex.ru>"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[[tool.poetry.source]]
name = "ott45"
url = "https://test.pypi.org/legacy/"