[tool.poetry]
name = "slavarobotam_brain_games"
version = "2.1.1"
description = "Small pack of simple games."
authors = [
  "Marina Morkovkina <zefiratakuet@yandex.ru>"
  ]
packages = [
    { include = "brain_games" },
  ]
repository = "https://github.com/slavarobotam/python-project-lvl1"
classifiers = [
    "Topic :: Games/Entertainment :: Puzzle Games"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[[tool.poetry.source]]
name = "ott45"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

